--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
+    "vite-svg-loader": "^5.1.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
