--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.17",
+    "@phosphor-icons/vue": "^2.1.6",
     "@vueuse/motion": "^2.0.0",
     "apexcharts": "^3.41.0",
     "axios": "^1.4.0",
@@ -23,7 +24,6 @@
     "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
-    "vite-svg-loader": "^5.1.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
@@ -43,6 +43,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
+    "vite-svg-loader": "^5.1.0",
     "vitest": "^0.32.0",
     "vue-tsc": "^1.6.5"
   }
