--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.17",
     "@phosphor-icons/vue": "^2.1.6",
+    "@vueuse/core": "^10.7.2",
     "@vueuse/motion": "^2.0.0",
     "apexcharts": "^3.41.0",
     "axios": "^1.4.0",
