--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
-    "vue3-apexcharts": "^1.4.1"
+    "vue3-apexcharts": "^1.4.1",
+    "youtube-vue3": "^0.1.15"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
